--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 40px;
-  /* background-color: #eee; */
+  background-color: #eee;
   border-bottom: 2px;
 }
 
@@ -22,4 +22,8 @@
 
 #header .btn {
   background-color: #dce1e7;
+}
+
+#header .dropdown-toogle {
+  background-color: transparent;
 }
