--- a/src/components/TopicBlocks/TopicBlocks.css
+++ b/src/components/TopicBlocks/TopicBlocks.css
@@ -1,6 +1,6 @@
 #topic-blocks {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   gap: 30px 0;
 }
