Changes for lagoon theme and css variables name change

--- a/src/components/ArticleActions/ArticleActions.css
+++ b/src/components/ArticleActions/ArticleActions.css
@@ -1,5 +1,5 @@
 #article-actions button {
-  background-color: var(--default-bg-color);
+  background-color: transparent;
   border: none;
 }
 #article-actions .bookmark-icon,
