--- a/src/components/BookmarksPreviewList/BookmarksPreviewList.css
+++ b/src/components/BookmarksPreviewList/BookmarksPreviewList.css
@@ -1,4 +1,4 @@
 #bookmarks-preview-list .bookmarks-list-item-container {
   padding: 5px;
-  border-bottom: var(--primary-border);
+  border-bottom: var(--item-separator-1);
 }
