--- a/src/components/TopicContent/TopicContent.css
+++ b/src/components/TopicContent/TopicContent.css
@@ -7,9 +7,9 @@
 }
 
 #topic-content .show-more-button {
-  background-color: var(--brand-color);
+  background-color: var(--lagoon-color);
   border: none;
   border-radius: 50px;
-  color: var(--secondary-color);
+  color: var(--color-2);
   padding: 5px 10px;
 }
