--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,12 @@
 #header {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 10px 50px;
   background-color: var(--lagoon-color);
   border-bottom: 2px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 10px 50px;
+  row-gap: 10px;
 }
 
 #header .home-icon {
@@ -17,14 +19,23 @@
 }
 
 #header .input-group {
+  flex-wrap: nowrap;
   width: auto;
-  border-radius: 50px;
-  overflow: hidden;
 }
 
-#header .input-group .form-control,
-.btn {
-  border-radius: 0;
+#header .input-group {
+  .form-control-label {
+    flex-grow: 1;
+  }
+  .form-control {
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    flex-grow: 5;
+  }
+  .btn {
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+  }
 }
 
 #header .btn {
@@ -40,9 +51,11 @@
 }
 
 #header .search-suggestions-dropdown {
+  background-color: var(--bg-color-1);
+  border-radius: 10px;
+  box-shadow: var(--box-shadow-1);
   position: absolute;
   top: 40px;
-  background-color: var(--bg-color-1);
   width: 100%;
 }
 
@@ -69,4 +82,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
   margin-left: 10px;
+}
+
+@media (max-width: 470px) {
+  #header #search-field {
+    order: 1;
+  }
 }
