--- a/src/components/TopicBlock/TopicBlock.css
+++ b/src/components/TopicBlock/TopicBlock.css
@@ -1,29 +1,34 @@
 #topic-block {
+  border-radius: 10px;
+  box-shadow: var(--box-shadow-1);
   display: flex;
   flex-direction: column;
-  box-shadow: var(--box-shadow-1);
-  border-radius: 10px;
+  min-height: 120px;
   padding: 10px 20px;
-  height: fit-content;
-  /* Add margin so that only 3 blocks fit in 1 row */
-  margin-right: 1px;
+}
+
+#topic-block .topic-heading-container h3 {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #topic-block .topic-articles {
   display: flex;
   flex-direction: column;
   flex-grow: 2;
-  height: fit-content;
 }
 
 #topic-block .topic-articles .topic-article-container {
   height: 0;
   overflow: hidden;
-  transition: height 1s;
+  text-overflow: ellipsis;
+  transition: opacity 2s, height 0.5s;
+  opacity: 0;
 }
 
-#topic-block:hover .topic-articles .topic-article-container {
+#topic-block:hover > .topic-articles > .topic-article-container {
   height: 26px;
+  opacity: 1;
 }
 
 #topic-block .article-count {
