--- a/src/components/TopicBlocks/TopicBlocks.css
+++ b/src/components/TopicBlocks/TopicBlocks.css
@@ -1,6 +1,7 @@
 #topic-blocks {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  gap: 30px 0;
+  gap: 30px 1px;
+  justify-content: space-between;
+  margin-right: 30px;
 }
