--- a/src/components/TopicBlock/TopicBlock.css
+++ b/src/components/TopicBlock/TopicBlock.css
@@ -3,6 +3,7 @@
   box-shadow: var(--box-shadow-1);
   display: flex;
   flex-direction: column;
+  height: fit-content;
   min-height: 120px;
   padding: 10px 20px;
 }
