--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@ body {
   background-color: var(--bg-color-1);
 }
 
-p {
-  margin: 0;
+body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
 
 html,
@@ -37,8 +37,22 @@ body,
   flex-grow: 2;
 }
 
-body::-webkit-scrollbar {
-  display: none; /* for Chrome, Safari, and Opera */
+/* #loader {
+  align-items: center;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+} */
+
+p {
+  margin: 0;
 }
 
 body ul {
